tests/negative/parser/untagged_arity.orng
const My_Untagged_Union: Type = @Untagged()